// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert to match snapshot [children] 1`] = `
<DocumentFragment>
  <div
    class="mb-4 p-0 border-0 d-flex c-alert alert alert-danger fade"
    role="alert"
  >
    <div
      class="alert-icon px-1 d-flex align-items-center"
    >
      <i
        aria-hidden="true"
      >
        <svg
          class="d-block"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </i>
    </div>
    <div
      class="alert-body px-3 py-2 flex-grow-1"
    >
      <p
        class="mb-0"
      />
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert to match snapshot [error message] 1`] = `
<DocumentFragment>
  <div
    class="mb-4 p-0 border-0 d-flex c-alert alert alert-danger fade"
    role="alert"
  >
    <div
      class="alert-icon px-1 d-flex align-items-center"
    >
      <i
        aria-hidden="true"
      >
        <svg
          class="d-block"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </i>
    </div>
    <div
      class="alert-body px-3 py-2 flex-grow-1"
    >
      <p
        class="mb-0"
      >
        error
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert to match snapshot [mixed] 1`] = `
<DocumentFragment>
  <div
    class="mb-4 p-0 border-0 d-flex c-alert alert alert-danger fade"
    role="alert"
  >
    <div
      class="alert-icon px-1 d-flex align-items-center"
    >
      <i
        aria-hidden="true"
      >
        <svg
          class="d-block"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </i>
    </div>
    <div
      class="alert-body px-3 py-2 flex-grow-1"
    >
      <p
        class="mb-0"
      >
        message
      </p>
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert to match snapshot [no item] 1`] = `<DocumentFragment />`;
